overlays/production/external-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-main-app
subsets:
  - addresses:
      - ip: 172.23.161.197
    ports:
      - port: 8080
