overlays/production/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-main-app
spec:
  ports:
    - port: 80
      targetPort: 80
