overlays/production/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  labels:
    app: main-app
spec:
  rules:
  - host: fsysolutions.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main-app
            port:
              number: 80
